# QRCodeProject-Zxing

./: .gitignore  README.md  assemble.gradle  build.gradle  gradle.properties  settings.gradle
app/: DataCollection.jks  build.gradle  channel
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-demo.cpp
app/src/main/java/com/android/qrcode/: PictureSelector.kt  QRCodeScanActivity.kt  ScanMaskView.kt
app/src/main/res/layout/: activity_qr_code_scan.xml
app/src/main/res/values/: colors.xml  strings.xml
buildSrc/: .gitignore  README.md  build.gradle.kts
buildSrc/gradle/wrapper/: gradle-wrapper.properties
buildSrc/src/main/java/com/pgyer/groovy/: ApiService.kt  Config.kt  NetworkUtils.kt  NotificationUtils.kt  PgyerUtils.kt  PublishUtils.kt  PushUtils.kt  Utils.kt
buildSrc/src/main/java/com/pgyer/groovy/bean/: DingRequestData.kt  FeishuRequest.kt  NotificationChannel.kt  PgyerData.kt  PgyerResult.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib-scan-code/: README.md  build.gradle
lib-scan-code/src/androidTest/java/com/android/scan/: ExampleInstrumentedTest.kt
lib-scan-code/src/main/java/com/android/scan/: AnalyzeCallback.kt  QRCodeUtils.kt  ScanQRCodeFragment.kt
lib-scan-code/src/main/res/layout/: fragment_scan_qr_code.xml
lib-scan-code/src/main/res/values/: colors.xml  strings.xml  styles.xml
zxingcpp/: build.gradle
zxingcpp/src/main/cpp/: CMakeLists.txt  native-zxing.cpp
zxingcpp/src/main/java/com/android/scan/: NativeZxing.kt
